--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
   <title>DK's webpage</title>
   <meta charset="utf-8">
+  <style>
+    a {
+      color:gray;
+      text-decoration: none;
+    }
+    h1 {
+      font-size:40px;
+      text-align:center;
+    }
+  </style>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
@@ -13,5 +23,9 @@
   </0l>
 
   <h2>Welcom to DK's webpage</h2>
-  <img src="coding.jpg" width="100%">
+  <img src="coding.jpg" width="400">
+
+
+  <p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/HX3fkGyszRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p
 </body>
